feat: :card_file_box: added fastify gql

--- a/code/apps/api/tsconfig.json
+++ b/code/apps/api/tsconfig.json
@@ -1,5 +1,14 @@
 {
-  "extends": "tsconfig/fastify.json",
-  "include": ["**/*.ts", "**/*.tsx"],
+  "compilerOptions": {
+    "target": "esnext",
+    "moduleResolution": "node",
+    "module": "commonjs",
+    "sourceMap": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "lib": ["esnext"],
+    "incremental": true
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
