--- a/code/apps/api/package.json
+++ b/code/apps/api/package.json
@@ -5,13 +5,19 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev server",
-    "start": "ts-node server"
+    "generate-types": "graphql-codegen",
+    "start": "yoga"
   },
   "dependencies": {
-    "fastify": "3.25.3",
+    "@graphql-codegen/cli": "^2.3.0",
+    "@graphql-codegen/typescript": "^2.4.1",
+    "@graphql-codegen/typescript-resolvers": "^2.4.2",
+    "@graphql-tools/schema": "^8.3.1",
+    "@graphql-yoga/cli": "0.0.1-alpha.3",
+    "fastify": "3.24.1",
     "fastify-healthcheck": "^3.1.0",
-    "graphql": "16.2.0",
-    "graphql-helix": "^1.11.0"
+    "graphql": "^16.1.0",
+    "graphql-yoga": "^2.0.0-alpha.6"
   },
   "devDependencies": {
     "config": "workspace:*",
