--- a/code/packages/config/package.json
+++ b/code/packages/config/package.json
@@ -9,5 +9,8 @@
   "dependencies": {
     "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0"
+  },
+  "devDependencies": {
+    "@graphql-eslint/eslint-plugin": "^3.3.0"
   }
 }
