--- a/code/apps/gql-api/package.json
+++ b/code/apps/gql-api/package.json
@@ -11,6 +11,7 @@
     "@prisma/client": "3.7.0",
     "@types/graphql-fields": "1.3.4",
     "apollo-server": "3.6.1",
+    "apollo-server-core": "^3.6.1",
     "class-validator": "0.13.2",
     "graphql": "15.8.0",
     "graphql-fields": "2.0.3",
