--- a/code/apps/result/package.json
+++ b/code/apps/result/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs",
+  "name": "result",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,9 @@
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "ui": "workspace:*"
+    "ui": "workspace:*",
+    "redis": "workspace:*",
+    "phin": "workspace:*"
   },
   "devDependencies": {
     "config": "workspace:*",
